// Vitest Snapshot v1

exports[`@/compontent/events/as-button.vue > Renders > A button to manage a poster's events 1`] = `
<a
  class="event"
>
  <svg
    class="has-event icon"
    viewBox="0 0 150 150"
  >
    <use
      href="/src/style/icons.svg#date-picker"
    />
    <text
      class="month"
      text-anchor="middle"
      x="57"
      y="24"
    >
      February
    </text>
    <text
      text-anchor="middle"
      x="57"
      y="84"
    >
      1
    </text>
  </svg>
</a>
`;

exports[`@/compontent/events/as-button.vue Renders A button to manage a poster's events 1`] = `
<a
  class="event"
>
  <svg
    class="has-event icon"
    viewBox="0 0 150 150"
  >
    <use
      href="#date-picker"
    />
    <text
      class="month"
      text-anchor="middle"
      x="57"
      y="24"
    >
      February
    </text>
    <text
      text-anchor="middle"
      x="57"
      y="84"
    >
      1
    </text>
  </svg>
</a>
`;
